Fixed iPhone image stretch issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,7 +16,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    -webkit-tap-highlight-color: rgb(0 0 0 / 25%);
+    -webkit-tap-highlight-color: transparent;
 }
 .Nav,
 .Hero,
@@ -144,6 +144,7 @@ h3 {
 }
 .Portfolio .PortfolioCard .image-container img {
     width: 100%;
+    height: 100%;
     max-width: 450px;
 }
 .Portfolio .PortfolioCard .mobile-title {
